fix(list): correctly support dark mode in lists with `has-striped-rows` class
Previously, their styles where being overwritten by the default
styles coming from the `mixins.is-flat-clickable();`

--- a/src/components/list/partial-styles/custom-styles.scss
+++ b/src/components/list/partial-styles/custom-styles.scss
@@ -4,7 +4,10 @@
     .mdc-deprecated-list {
         border: 1px solid rgb(var(--contrast-400));
     }
+}
 
+:host(.has-striped-rows),
+:host(.has-striped-rows.has-interactive-items) {
     .mdc-deprecated-list-item {
         &:nth-child(even) {
             background-color: var(
